--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
     </header>
     <main>
         <div>
-            <div>
-                <a href="#" id="viewHighScore">View High Scores</a>
-            </div>
-            <div id="timer">
+            <a href="#" id="viewHighScore">Click to see High Scores</a>>
+            <div id="timer" style="display: none;">
                 Time: <span id="timeLeft">0</span>
             </div>
             <div id="timesUp" style="display: none;">Time's Up!</div>
