fixed a bug in high scores

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <main>
         <div>
-            <a href="#" id="viewHighScore">Click to see High Scores</a>>
+            <a href="#" id="viewHighScore">Click to see High Scores</a>
             <div id="timer" style="display: none;">
                 Time: <span id="timeLeft">0</span>
             </div>
